--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,4 @@
+
 .nav, .pagination, .carousel, .panel-title a {
     cursor: pointer;
 }
@@ -326,7 +327,18 @@ a {
     color: #FFFFFF;
     text-decoration: none;
 }
-
+.header-rght ul.dropdown-menu > li{
+	padding:0;
+	text-align:center;
+}
+.header-rght ul.dropdown-menu > li > a{
+	color:#152A4A;
+	padding:5px 15px;
+}
+.header-rght ul.dropdown-menu > li > a:hover, .header-rght ul.dropdown-menu > li > a:focus{
+	color:#ffffff;
+	background-color:#152A4A;
+}
 .mid-li {
     position: relative;
 }
@@ -420,8 +432,8 @@ a {
     background-color: transparent;
     font-weight: 500;
     font-size: 15px;
-    padding: 0 30px 0 60px;
-    line-height: 61px;
+    padding: 30px 30px 30px 60px;
+    line-height: 1;
     text-transform: uppercase;
 }
 
@@ -436,7 +448,7 @@ a {
 .badge {
     padding: 7px 10px;
     font-size: 15px;
-    margin-top: 17px;
+    margin-top: -5px;
 }
 
 a.list-group-item, a.list-group-item:focus, a.list-group-item:hover, button.list-group-item:focus, button.list-group-item:hover {
@@ -713,7 +725,10 @@ a.list-group-item, a.list-group-item:focus, a.list-group-item:hover, button.list
     color: #152A4A;
     font-weight: 600;
 }
-
+.caccounts-second .table-striped > tbody > tr > td:nth-child(3){text-align: center}
+.caccounts-second .table-striped > tbody > tr > td:nth-child(4),
+.caccounts-second .table-striped > tbody > tr > td:nth-child(5),
+.caccounts-second .table-striped > tbody > tr > td:nth-child(6){text-align: right}
 .pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
     background-color: #152A4A;
     border-color: #152A4A;
