--- a/css/app.css
+++ b/css/app.css
@@ -560,7 +560,7 @@ a.list-group-item, a.list-group-item:focus, a.list-group-item:hover, button.list
 .main-part-rgt .panel-info .panel-heading{
     color: #152A4A;
     background-color: transparent;
-    border-bottom: 1px solid #EEEEEE;
+    border-bottom: 1px solid #149FBC;
     margin-bottom: 30px;
     padding: 0;
 }
@@ -780,16 +780,19 @@ form .control-label{
     font-family: 'ESC-SemiBold';
     font-weight: normal;
 }
-form input[type="text"],form input[type="number"], form select.form-control{
-    border: 1px solid #e0dfdf;
-    font-size: 16px;
-    line-height: 50px;
-    color: #636363;
-    border-radius: 0;
-    height: 50px;
-    padding: 0 20px;
-    box-shadow: none;
-    font-family: 'ESC-Light';
+form input[type="text"],form input[type="number"], form select.form-control, form input, form textarea{
+    border: 1px solid #e0dfdf !important;
+    font-size: 16px !important;
+    line-height: 50px !important;
+    color: #636363 !important;
+    border-radius: 0 !important;
+    height: 50px !important;
+    padding: 0 20px !important;
+    box-shadow: none !important;
+    font-family: 'ESC-Light' !important;
+}
+form textarea{
+    height: 175px !important;
 }
 form .input-group-btn button{
     padding: 13px 12px;
@@ -801,7 +804,7 @@ form select.form-control {
     -moz-appearance: none; /* Firefox */
     -webkit-appearance: none; /* Safari and Chrome */
     appearance: none;
-    background: url("../images/icon-select.png") no-repeat 95% center;
+    background: #FFFFFF url("../images/icon-select.png") no-repeat 95% center;
 }
 input[type="number"] {
     -webkit-appearance: textfield;
@@ -920,6 +923,43 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .trade-activi td[neg^="-"]:after {
     color: #fc1e1e;
+}
+.spc-frm-bg {
+    background-color: #f5f5f5;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.btn {
+    display: inline-block;
+    padding: 15px 35px;
+    margin-bottom: 0;
+    font-family: 'ESC-Bold';
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    text-transform: uppercase;
+}
+.btn-primary{
+    color: #FFFFFF;
+    background-color: #149fbc;
+    border-color: #149FBC;
+}
+.btn-primary:hover, .btn-primary:focus{
+    background-color: #26CC68;
+    border-color: #26CC68;
 }
 /*=====================================================*/
 @media only screen and (max-width: 1199px) {
