--- a/app/broker/management/include/query.html
+++ b/app/broker/management/include/query.html
@@ -60,8 +60,11 @@
                     <label class="control-label" for="login">{{"Login"|translate}}</label>
                 </div>
                 <div class="col-sm-12">
-                    <input id="login" name="login" class="form-control"
-                           ng-model="searchParams.login" type="number" only-digits ng-trim="true">
+                    <div class="number-input"><input id="login" name="login" class="form-control"
+                                                     ng-model="searchParams.login" type="number" only-digits ng-trim="true" min="0">
+                        <div onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="ni plus"></div>
+                        <div onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="ni minus" ></div>
+                    </div>
                 </div>
             </div>
         </div>
